--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.9",
     "lucide-react": "^0.453.0",
+    "pdfkit": "^0.15.0",
     "react": "^19.0.0-rc-d49123f7-20241019",
     "react-dom": "^19.0.0-rc-d49123f7-20241019",
     "react-hook-form": "^7.53.1",
@@ -35,6 +36,7 @@
   "devDependencies": {
     "@eslint/js": "^9.11.1",
     "@types/node": "^22.7.7",
+    "@types/pdfkit": "^0.13.5",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
