--- a/package.json
+++ b/package.json
@@ -1,56 +1,38 @@
 {
-  "name": "throatunwrap",
+  "name": "spiralflow",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
-    "@legendapp/state": "^3.0.0-beta.12",
-    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
-    "@supabase/supabase-js": "^2.45.6",
-    "@types/react-lazy-load-image-component": "^1.6.4",
+    "@radix-ui/react-tooltip": "^1.1.3",
+    "@types/pdfkit": "^0.13.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.11.9",
-    "lucide-react": "^0.453.0",
-    "pdfkit": "^0.15.0",
-    "react": "^19.0.0-rc-d49123f7-20241019",
-    "react-dom": "^19.0.0-rc-d49123f7-20241019",
-    "react-hook-form": "^7.53.1",
-    "react-lazy-load-image-component": "^1.6.2",
-    "react-query": "^3.39.3",
-    "react-router-dom": "^6.27.0",
+    "lucide-react": "^0.454.0",
+    "next": "15.0.2",
+    "pdfkit": "^0.15.1",
+    "react": "19.0.0-rc-02c0e824-20241028",
+    "react-dom": "19.0.0-rc-02c0e824-20241028",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7",
-    "vite-tsconfig-paths": "^5.0.1",
-    "zod": "^3.23.8"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@eslint/js": "^9.11.1",
-    "@types/node": "^22.7.7",
-    "@types/pdfkit": "^0.13.5",
-    "@types/react": "^18.3.10",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.2",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.11.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.12",
-    "globals": "^15.9.0",
-    "postcss": "^8.4.47",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.8"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.2"
   }
 }
