feat: add 2d view, export file as PDF, print file, and share file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
     "module": "esnext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
+    "experimentalDecorators": true,
+    "jsxFactory": "jsx",
+    "emitDecoratorMetadata": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
