--- a/package.json
+++ b/package.json
@@ -10,27 +10,38 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@legendapp/state": "^3.0.0-beta.19",
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@swc/helpers": "^0.5.15",
+    "@types/blob-stream": "^0.1.33",
     "@types/pdfkit": "^0.13.5",
+    "@types/three": "^0.170.0",
+    "blob-stream": "^0.1.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.11",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
+    "next-themes": "^0.4.3",
     "pdfkit": "^0.15.1",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-hook-form": "^7.53.2",
+    "react-pdf": "^9.1.1",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.170.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
