--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "framer-motion": "^11.11.11",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.454.0",
-    "next": "15.0.2",
+    "next": "^15.1.0",
     "next-themes": "^0.4.3",
     "pdfkit": "^0.15.1",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.53.2",
     "react-pdf": "^9.1.1",
     "sonner": "^1.7.0",
