chore: update dependencies and improve configuration
- Updated various dependencies in package.json for better performance and compatibility.
- Changed PostCSS configuration to use '@tailwindcss/postcss' instead of 'tailwindcss'.
- Refactored global CSS to utilize custom properties for theming and improved structure.
- Enhanced parameter controls by introducing cut angle options and adjusting validation schema.
- Added a new data file for cut angle options to streamline parameter controls.
- Adjusted default values in the store for parameters to improve initial state.
- Updated Tailwind CSS configuration for better dark mode support.
- Modified TypeScript configuration for improved JSX handling.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,10 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "experimentalDecorators": true,
-    "jsxFactory": "jsx",
+    "jsxImportSource": "react",
+    "jsx": "preserve",
     "emitDecoratorMetadata": true,
     "isolatedModules": true,
-    "jsx": "preserve",
     "incremental": true,
     "plugins": [
       {
