--- a/package.json
+++ b/package.json
@@ -9,50 +9,52 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.1",
-    "@legendapp/state": "^3.0.0-beta.19",
-    "@radix-ui/react-icons": "^1.3.1",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.2",
-    "@radix-ui/react-toggle": "^1.1.0",
-    "@radix-ui/react-toggle-group": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.3",
-    "@swc/helpers": "^0.5.15",
+    "@hookform/resolvers": "^5.0.1",
+    "@legendapp/state": "^3.0.0-beta.30",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-select": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.3",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.4",
+    "@radix-ui/react-toast": "^1.2.7",
+    "@radix-ui/react-toggle": "^1.1.3",
+    "@radix-ui/react-toggle-group": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.2.0",
+    "@swc/helpers": "^0.5.17",
+    "@tailwindcss/postcss": "^4.1.4",
     "@types/blob-stream": "^0.1.33",
-    "@types/pdfkit": "^0.13.5",
-    "@types/three": "^0.170.0",
+    "@types/pdfkit": "^0.13.9",
+    "@types/three": "^0.175.0",
     "blob-stream": "^0.1.3",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.11.11",
-    "jspdf": "^2.5.2",
-    "lucide-react": "^0.454.0",
-    "next": "^15.1.0",
-    "next-themes": "^0.4.3",
-    "pdfkit": "^0.15.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.53.2",
-    "react-pdf": "^9.1.1",
-    "sonner": "^1.7.0",
-    "tailwind-merge": "^2.5.4",
+    "framer-motion": "^12.7.4",
+    "jspdf": "^3.0.1",
+    "lucide-react": "^0.488.0",
+    "next": "^15.3.1",
+    "next-themes": "^0.4.6",
+    "pdfkit": "^0.17.0",
+    "postcss": "^8.5.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.55.0",
+    "react-pdf": "^9.2.1",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.170.0",
-    "zod": "^3.23.8"
+    "three": "^0.175.0",
+    "tw-animate-css": "^1.2.5",
+    "zod": "^4.0.0-beta.20250418T202744"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.2",
-    "postcss": "^8",
-    "prettier-plugin-tailwindcss": "^0.6.8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@types/node": "^22",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "eslint": "^9.25.0",
+    "eslint-config-next": "15.3.1",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "typescript": "^5.8.3"
   }
 }
